<resources>
    <string name="app_name">QuantumMind</string>
    <string name="start_game">Begin Game</string>
    <string name="view_achievements">View Achievements</string>
    <string name="username_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Log in</string>
    <string name="create_account">Sign up</string>
    <string name="lessons">Lessons</string>
    <string name="home">Home</string>
    <string name="questions">Questions</string>
    <string name="profile">My Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="save_changes">Save changes</string>
    <string name="profile_name">Name</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit profile</string>
    <string name="help_support">Help</string>
    <string name="language">Language</string>
    <string name="privacy">Privacy</string>
    <string name="notifications">Notifications</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forgot your password?</string>
    <string name="register">Dont have account? Register here</string>
    <string name="lesson">Lesson</string>
    <string name="accept">Accept</string>
    <string name="check">Check</string>
    <string name="registerButtonText">Register</string>
</resources>